--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv==1.0.1",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.22",
+    "psycopg2-binary>=2.9.10",
     "sqlalchemy>=2.0.46",
     "tf-keras>=2.20.1",
     "uvicorn>=0.40.0",
